feat: Home 페이지 생성 #9
Home 페이지 생성

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "@assets/*": ["./src/assets/*"],
       "@scripts/*": ["./src/scripts/*"],
       "@components/*": ["./src/scripts/components/*"],
+      "@pages/*": ["./src/scripts/pages/*"],
       "@util/*": ["./src/scripts/util/*"],
       "@styles/*": ["./src/styles/*"]
     }
