feat: 버튼으로 애니메이션 속도 조절 하는 기능 구현 #9
버튼으로 애니메이션 속도 조절 하는 기능 구현
애니메이션 속도 class를 common.css에 추가
utils에 현재 속도 상태에 따른 class를 반환하는 함수 추가

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
       "@scripts/*": ["./src/scripts/*"],
       "@components/*": ["./src/scripts/components/*"],
       "@pages/*": ["./src/scripts/pages/*"],
-      "@util/*": ["./src/scripts/util/*"],
+      "@store/*": ["./src/scripts/store/*"],
+      "@utils/*": ["./src/scripts/utils/*"],
       "@styles/*": ["./src/styles/*"]
     }
   }
